src/gen/PasGrammarParser.java
// Generated from C:/Users/ospen/IdeaProjects/Mt/pasToCplusplus/src\PasGrammar.g4 by ANTLR 4.7
package gen;

import utils.Variables;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PasGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, NOT=3, AND=4, XOR=5, OR=6, DO=7, WHILE=8, IF=9, THEN=10, 
		FOR=11, SEMI=12, COLON=13, COMMA=14, DOT=15, LPAREN=16, RPAREN=17, EQUALITY=18, 
		ASSIGNMENT=19, PLUS=20, MINUS=21, MUL=22, DIV=23, PROGRAM=24, VAR=25, 
		BEGIN=26, END=27, CONST=28, BOOLEAN=29, CHAR=30, INTEGER=31, REAL=32, 
		DOUBLE=33, EXTENDED=34, STRING=35, READ=36, READLN=37, WRITE=38, WRITELN=39, 
		IDENTIFIER=40, NUMBER=41, WS=42, OLD_STYLE_COMMENT=43, COMMENT=44;
	public static final int
		RULE_program = 0, RULE_programHeading = 1, RULE_variableDeclarationPart = 2, 
		RULE_variableDeclaration = 3, RULE_identifierList = 4, RULE_compoundStatement = 5, 
		RULE_statements = 6, RULE_assignmentState = 7, RULE_funcState = 8, RULE_funcName = 9, 
		RULE_expression = 10, RULE_type = 11, RULE_ifState = 12, RULE_unOp = 13, 
		RULE_logicalOp = 14, RULE_whileState = 15, RULE_logical = 16, RULE_logicalSign = 17, 
		RULE_identifier = 18, RULE_number = 19;
	public static final String[] ruleNames = {
		"program", "programHeading", "variableDeclarationPart", "variableDeclaration", 
		"identifierList", "compoundStatement", "statements", "assignmentState", 
		"funcState", "funcName", "expression", "type", "ifState", "unOp", "logicalOp", 
		"whileState", "logical", "logicalSign", "identifier", "number"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'>'", "'<'", null, null, null, null, null, null, null, null, null, 
		"';'", "':'", "','", "'.'", "'('", "')'", "'='", "':='", "'+'", "'-'", 
		"'*'", "'/'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, "NOT", "AND", "XOR", "OR", "DO", "WHILE", "IF", "THEN", 
		"FOR", "SEMI", "COLON", "COMMA", "DOT", "LPAREN", "RPAREN", "EQUALITY", 
		"ASSIGNMENT", "PLUS", "MINUS", "MUL", "DIV", "PROGRAM", "VAR", "BEGIN", 
		"END", "CONST", "BOOLEAN", "CHAR", "INTEGER", "REAL", "DOUBLE", "EXTENDED", 
		"STRING", "READ", "READLN", "WRITE", "WRITELN", "IDENTIFIER", "NUMBER", 
		"WS", "OLD_STYLE_COMMENT", "COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PasGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PasGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public String text;
		public VariableDeclarationPartContext variableDeclarationPart;
		public CompoundStatementContext compoundStatement;
		public VariableDeclarationPartContext variableDeclarationPart() {
			return getRuleContext(VariableDeclarationPartContext.class,0);
		}
		public CompoundStatementContext compoundStatement() {
			return getRuleContext(CompoundStatementContext.class,0);
		}
		public ProgramHeadingContext programHeading() {
			return getRuleContext(ProgramHeadingContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PasGrammarListener ) ((PasGrammarListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PasGrammarListener ) ((PasGrammarListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PROGRAM) {
				{
				setState(40);
				programHeading();
				}
			}


			           ((ProgramContext)_localctx).text =  "#include <stdlib.h>\n";
			           _localctx.text += "#include <stdio.h>\n";
			     
			setState(44);
			((ProgramContext)_localctx).variableDeclarationPart = variableDeclarationPart();
			_localctx.text += ((ProgramContext)_localctx).variableDeclarationPart.name;
			setState(46);
			((ProgramContext)_localctx).compoundStatement = compoundStatement();
			_localctx.text += "int main() {\n" + ((ProgramContext)_localctx).compoundStatement.name + "return 0;\n}";
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramHeadingContext extends ParserRuleContext {
		public String name;
		public TerminalNode PROGRAM() { return getToken(PasGrammarParser.PROGRAM, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(PasGrammarParser.SEMI, 0); }
		public ProgramHeadingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programHeading; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PasGrammarListener ) ((PasGrammarListener)listener).enterProgramHeading(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PasGrammarListener ) ((PasGrammarListener)listener).exitProgramHeading(this);
		}
	}

	public final ProgramHeadingContext programHeading() throws RecognitionException {
		ProgramHeadingContext _localctx = new ProgramHeadingContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programHeading);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			match(PROGRAM);
			setState(50);
			identifier();
			setState(51);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationPartContext extends ParserRuleContext {
		public String name;
		public VariableDeclarationContext variableDeclaration;
		public TerminalNode VAR() { return getToken(PasGrammarParser.VAR, 0); }
		public List<VariableDeclarationContext> variableDeclaration() {
			return getRuleContexts(VariableDeclarationContext.class);
		}
		public VariableDeclarationContext variableDeclaration(int i) {
			return getRuleContext(VariableDeclarationContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(PasGrammarParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(PasGrammarParser.SEMI, i);
		}
		public VariableDeclarationPartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclarationPart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PasGrammarListener ) ((PasGrammarListener)listener).enterVariableDeclarationPart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PasGrammarListener ) ((PasGrammarListener)listener).exitVariableDeclarationPart(this);
		}
	}

	public final VariableDeclarationPartContext variableDeclarationPart() throws RecognitionException {
		VariableDeclarationPartContext _localctx = new VariableDeclarationPartContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variableDeclarationPart);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(VAR);
			setState(54);
			((VariableDeclarationPartContext)_localctx).variableDeclaration = variableDeclaration();
			((VariableDeclarationPartContext)_localctx).name =  ((VariableDeclarationPartContext)_localctx).variableDeclaration.name;
			setState(62);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(56);
					match(SEMI);
					setState(57);
					((VariableDeclarationPartContext)_localctx).variableDeclaration = variableDeclaration();
					_localctx.name += ((VariableDeclarationPartContext)_localctx).variableDeclaration.name;
					}
					} 
				}
				setState(64);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(65);
			match(SEMI);
			_localctx.name += "\n";
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationContext extends ParserRuleContext {
		public String name;
		public IdentifierListContext identifierList;
		public TypeContext type;
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public TerminalNode COLON() { return getToken(PasGrammarParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PasGrammarListener ) ((PasGrammarListener)listener).enterVariableDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PasGrammarListener ) ((PasGrammarListener)listener).exitVariableDeclaration(this);
		}
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variableDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			((VariableDeclarationContext)_localctx).identifierList = identifierList();
			setState(69);
			match(COLON);
			setState(70);
			((VariableDeclarationContext)_localctx).type = type();
			((VariableDeclarationContext)_localctx).name =  ((VariableDeclarationContext)_localctx).type.text + " " + ((VariableDeclarationContext)_localctx).identifierList.name + ";";
			}
			_ctx.stop = _input.LT(-1);

			        Variables.putVar(_localctx.type.text, _localctx.identifierList.name.split(", "));
			    
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierListContext extends ParserRuleContext {
		public String name;
		public IdentifierContext identifier;
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(PasGrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PasGrammarParser.COMMA, i);
		}
		public IdentifierListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifierList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PasGrammarListener ) ((PasGrammarListener)listener).enterIdentifierList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PasGrammarListener ) ((PasGrammarListener)listener).exitIdentifierList(this);
		}
	}

	public final IdentifierListContext identifierList() throws RecognitionException {
		IdentifierListContext _localctx = new IdentifierListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_identifierList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			((IdentifierListContext)_localctx).identifier = identifier();
			((IdentifierListContext)_localctx).name =  (((IdentifierListContext)_localctx).identifier!=null?_input.getText(((IdentifierListContext)_localctx).identifier.start,((IdentifierListContext)_localctx).identifier.stop):null);
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(75);
				match(COMMA);
				setState(76);
				((IdentifierListContext)_localctx).identifier = identifier();
				_localctx.name += ", " + (((IdentifierListContext)_localctx).identifier!=null?_input.getText(((IdentifierListContext)_localctx).identifier.start,((IdentifierListContext)_localctx).identifier.stop):null);
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompoundStatementContext extends ParserRuleContext {
		public String name;
		public StatementsContext statements;
		public TerminalNode BEGIN() { return getToken(PasGrammarParser.BEGIN, 0); }
		public TerminalNode END() { return getToken(PasGrammarParser.END, 0); }
		public TerminalNode DOT() { return getToken(PasGrammarParser.DOT, 0); }
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public CompoundStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compoundStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PasGrammarListener ) ((PasGrammarListener)listener).enterCompoundStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PasGrammarListener ) ((PasGrammarListener)listener).exitCompoundStatement(this);
		}
	}

	public final CompoundStatementContext compoundStatement() throws RecognitionException {
		CompoundStatementContext _localctx = new CompoundStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_compoundStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(BEGIN);
			((CompoundStatementContext)_localctx).name =  "";
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WHILE) | (1L << IF) | (1L << READ) | (1L << READLN) | (1L << WRITE) | (1L << WRITELN) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(86);
				((CompoundStatementContext)_localctx).statements = statements();
				_localctx.name += ((CompoundStatementContext)_localctx).statements.name + "\n";
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(94);
			match(END);
			setState(95);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public String name;
		public AssignmentStateContext assignmentState;
		public FuncStateContext funcState;
		public IfStateContext ifState;
		public WhileStateContext whileState;
		public AssignmentStateContext assignmentState() {
			return getRuleContext(AssignmentStateContext.class,0);
		}
		public FuncStateContext funcState() {
			return getRuleContext(FuncStateContext.class,0);
		}
		public IfStateContext ifState() {
			return getRuleContext(IfStateContext.class,0);
		}
		public WhileStateContext whileState() {
			return getRuleContext(WhileStateContext.class,0);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PasGrammarListener ) ((PasGrammarListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PasGrammarListener ) ((PasGrammarListener)listener).exitStatements(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_statements);
		try {
			setState(109);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				((StatementsContext)_localctx).assignmentState = assignmentState();
				((StatementsContext)_localctx).name =  ((StatementsContext)_localctx).assignmentState.name;
				}
				break;
			case READ:
			case READLN:
			case WRITE:
			case WRITELN:
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				((StatementsContext)_localctx).funcState = funcState();
				((StatementsContext)_localctx).name =  "\t" + ((StatementsContext)_localctx).funcState.name;
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 3);
				{
				setState(103);
				((StatementsContext)_localctx).ifState = ifState();
				((StatementsContext)_localctx).name =  ((StatementsContext)_localctx).ifState.text;
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 4);
				{
				setState(106);
				((StatementsContext)_localctx).whileState = whileState();
				((StatementsContext)_localctx).name =  ((StatementsContext)_localctx).whileState.text;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentStateContext extends ParserRuleContext {
		public String name;
		public IdentifierContext identifier;
		public NumberContext number;
		public ExpressionContext expression;
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public TerminalNode ASSIGNMENT() { return getToken(PasGrammarParser.ASSIGNMENT, 0); }
		public TerminalNode SEMI() { return getToken(PasGrammarParser.SEMI, 0); }
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignmentStateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignmentState; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PasGrammarListener ) ((PasGrammarListener)listener).enterAssignmentState(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PasGrammarListener ) ((PasGrammarListener)listener).exitAssignmentState(this);
		}
	}

	public final AssignmentStateContext assignmentState() throws RecognitionException {
		AssignmentStateContext _localctx = new AssignmentStateContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_assignmentState);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			((AssignmentStateContext)_localctx).identifier = identifier();
			((AssignmentStateContext)_localctx).name =  "\t" + (((AssignmentStateContext)_localctx).identifier!=null?_input.getText(((AssignmentStateContext)_localctx).identifier.start,((AssignmentStateContext)_localctx).identifier.stop):null) + " = ";
			setState(113);
			match(ASSIGNMENT);
			setState(123);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(114);
				((AssignmentStateContext)_localctx).identifier = identifier();
				_localctx.name += (((AssignmentStateContext)_localctx).identifier!=null?_input.getText(((AssignmentStateContext)_localctx).identifier.start,((AssignmentStateContext)_localctx).identifier.stop):null);
				}
				break;
			case 2:
				{
				setState(117);
				((AssignmentStateContext)_localctx).number = number();
				_localctx.name += (((AssignmentStateContext)_localctx).number!=null?_input.getText(((AssignmentStateContext)_localctx).number.start,((AssignmentStateContext)_localctx).number.stop):null);
				}
				break;
			case 3:
				{
				setState(120);
				((AssignmentStateContext)_localctx).expression = expression();
				_localctx.name += (((AssignmentStateContext)_localctx).expression!=null?_input.getText(((AssignmentStateContext)_localctx).expression.start,((AssignmentStateContext)_localctx).expression.stop):null);
				}
				break;
			}
			setState(125);
			match(SEMI);
			_localctx.name += ";";
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncStateContext extends ParserRuleContext {
		public String name;
		public FuncNameContext funcName() {
			return getRuleContext(FuncNameContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(PasGrammarParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(PasGrammarParser.RPAREN, 0); }
		public TerminalNode SEMI() { return getToken(PasGrammarParser.SEMI, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public FuncStateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcState; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PasGrammarListener ) ((PasGrammarListener)listener).enterFuncState(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PasGrammarListener ) ((PasGrammarListener)listener).exitFuncState(this);
		}
	}

	public final FuncStateContext funcState() throws RecognitionException {
		FuncStateContext _localctx = new FuncStateContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_funcState);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			funcName();
			setState(129);
			match(LPAREN);
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(130);
				identifierList();
				}
			}

			setState(133);
			match(RPAREN);
			setState(134);
			match(SEMI);
			}
			_ctx.stop = _input.LT(-1);

			            ((FuncStateContext)_localctx).name =  Variables.getFunc(_localctx.funcName().name, _localctx.identifierList()== null ? new String[0] : _localctx.identifierList().name.split(", "));
			    
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncNameContext extends ParserRuleContext {
		public String name;
		public TerminalNode READ() { return getToken(PasGrammarParser.READ, 0); }
		public TerminalNode READLN() { return getToken(PasGrammarParser.READLN, 0); }
		public TerminalNode WRITE() { return getToken(PasGrammarParser.WRITE, 0); }
		public TerminalNode WRITELN() { return getToken(PasGrammarParser.WRITELN, 0); }
		public FuncNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PasGrammarListener ) ((PasGrammarListener)listener).enterFuncName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PasGrammarListener ) ((PasGrammarListener)listener).exitFuncName(this);
		}
	}
